--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header{
 }
 
 header a{
-  color:#ffffff;
+  color:#046307;
   text-decoration:none;
   text-transform: uppercase;
   font-size:16px;
